sonarqube-openshift-docker-master/yaml/other/massive-template.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Pod
  metadata:
    annotations:
      openshift.io/container.sonarqube.image.entrypoint: '["./bin/run.sh"]'
      openshift.io/deployment-config.latest-version: "1"
      openshift.io/deployment-config.name: sonarqube
      openshift.io/deployment.name: sonarqube-1
      openshift.io/generated-by: OpenShiftNewApp
      openshift.io/scc: restricted
    creationTimestamp: 2020-06-29T23:47:54Z
    generateName: sonarqube-1-
    labels:
      app: sonarqube
      deployment: sonarqube-1
      deploymentconfig: sonarqube
    name: sonarqube-1-r29fg
    namespace: myproject
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: ReplicationController
      name: sonarqube-1
      uid: f248e612-ba62-11ea-8f7c-46673c28143b
    resourceVersion: "152452"
    selfLink: /api/v1/namespaces/myproject/pods/sonarqube-1-r29fg
    uid: f3dbcf75-ba62-11ea-8f7c-46673c28143b
  spec:
    containers:
    - image: openshiftdemos/sonarqube@sha256:fe2c7b8e9923c4dc4bd7a5d12d51ee61eb171f8898121d5f7a921ba4e5a3e67c
      imagePullPolicy: IfNotPresent
      livenessProbe:
        failureThreshold: 5
        httpGet:
          path: /
          port: 9000
          scheme: HTTP
        initialDelaySeconds: 180
        periodSeconds: 20
        successThreshold: 1
        timeoutSeconds: 5
      name: sonarqube
      ports:
      - containerPort: 9000
        protocol: TCP
      readinessProbe:
        failureThreshold: 5
        httpGet:
          path: /
          port: 9000
          scheme: HTTP
        initialDelaySeconds: 60
        periodSeconds: 20
        successThreshold: 1
        timeoutSeconds: 5
      resources:
        limits:
          cpu: "1"
          memory: 2Gi
        requests:
          cpu: 200m
          memory: 1Gi
      securityContext:
        capabilities:
          drop:
          - KILL
          - MKNOD
          - SETGID
          - SETUID
        runAsUser: 1000130000
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
      volumeMounts:
      - mountPath: /opt/sonarqube/data
        name: sonarqube-data
      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
        name: default-token-clx95
        readOnly: true
    dnsPolicy: ClusterFirst
    imagePullSecrets:
    - name: default-dockercfg-mmzqw
    nodeName: localhost
    priority: 0
    restartPolicy: Always
    schedulerName: default-scheduler
    securityContext:
      fsGroup: 1000130000
      seLinuxOptions:
        level: s0:c11,c10
    serviceAccount: default
    serviceAccountName: default
    terminationGracePeriodSeconds: 30
    tolerations:
    - effect: NoSchedule
      key: node.kubernetes.io/memory-pressure
      operator: Exists
    volumes:
    - name: sonarqube-data
      persistentVolumeClaim:
        claimName: sonarqube-data
    - name: default-token-clx95
      secret:
        defaultMode: 420
        secretName: default-token-clx95
  status:
    conditions:
    - lastProbeTime: null
      lastTransitionTime: 2020-06-29T23:47:54Z
      status: "True"
      type: Initialized
    - lastProbeTime: null
      lastTransitionTime: 2020-06-29T23:50:05Z
      status: "True"
      type: Ready
    - lastProbeTime: null
      lastTransitionTime: null
      status: "True"
      type: ContainersReady
    - lastProbeTime: null
      lastTransitionTime: 2020-06-29T23:47:54Z
      status: "True"
      type: PodScheduled
    containerStatuses:
    - containerID: docker://06706cbb01a39a3a5b11c97729390d5ff86d4a6fabfbf10a99bfcf4ba3bb5f35
      image: docker.io/openshiftdemos/sonarqube@sha256:fe2c7b8e9923c4dc4bd7a5d12d51ee61eb171f8898121d5f7a921ba4e5a3e67c
      imageID: docker-pullable://docker.io/openshiftdemos/sonarqube@sha256:fe2c7b8e9923c4dc4bd7a5d12d51ee61eb171f8898121d5f7a921ba4e5a3e67c
      lastState: {}
      name: sonarqube
      ready: true
      restartCount: 0
      state:
        running:
          startedAt: 2020-06-29T23:48:58Z
    hostIP: 192.168.64.3
    phase: Running
    podIP: 172.17.0.16
    qosClass: Burstable
    startTime: 2020-06-29T23:47:54Z
- apiVersion: v1
  kind: ReplicationController
  metadata:
    annotations:
      openshift.io/deployer-pod.completed-at: 2020-06-29 23:50:09 +0000 UTC
      openshift.io/deployer-pod.created-at: 2020-06-29 23:47:52 +0000 UTC
      openshift.io/deployer-pod.name: sonarqube-1-deploy
      openshift.io/deployment-config.latest-version: "1"
      openshift.io/deployment-config.name: sonarqube
      openshift.io/deployment.phase: Complete
      openshift.io/deployment.replicas: "1"
      openshift.io/deployment.status-reason: config change
      openshift.io/encoded-deployment-config: |
        {"kind":"DeploymentConfig","apiVersion":"apps.openshift.io/v1","metadata":{"name":"sonarqube","namespace":"myproject","selfLink":"/apis/apps.openshift.io/v1/namespaces/myproject/deploymentconfigs/sonarqube","uid":"f016f55f-ba62-11ea-8b66-46673c28143b","resourceVersion":"151915","generation":2,"creationTimestamp":"2020-06-29T23:47:48Z","labels":{"app":"sonarqube","deploymentconfig":"sonarqube"},"annotations":{"openshift.io/generated-by":"OpenShiftNewApp"}},"spec":{"strategy":{"type":"Roll [...]
    creationTimestamp: 2020-06-29T23:47:52Z
    generation: 2
    labels:
      app: sonarqube
      deploymentconfig: sonarqube
      openshift.io/deployment-config.name: sonarqube
    name: sonarqube-1
    namespace: myproject
    ownerReferences:
    - apiVersion: apps.openshift.io/v1
      blockOwnerDeletion: true
      controller: true
      kind: DeploymentConfig
      name: sonarqube
      uid: f016f55f-ba62-11ea-8b66-46673c28143b
    resourceVersion: "152471"
    selfLink: /api/v1/namespaces/myproject/replicationcontrollers/sonarqube-1
    uid: f248e612-ba62-11ea-8f7c-46673c28143b
  spec:
    replicas: 1
    selector:
      app: sonarqube
      deployment: sonarqube-1
      deploymentconfig: sonarqube
    template:
      metadata:
        annotations:
          openshift.io/container.sonarqube.image.entrypoint: '["./bin/run.sh"]'
          openshift.io/deployment-config.latest-version: "1"
          openshift.io/deployment-config.name: sonarqube
          openshift.io/deployment.name: sonarqube-1
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: sonarqube
          deployment: sonarqube-1
          deploymentconfig: sonarqube
      spec:
        containers:
        - image: openshiftdemos/sonarqube@sha256:fe2c7b8e9923c4dc4bd7a5d12d51ee61eb171f8898121d5f7a921ba4e5a3e67c
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /
              port: 9000
              scheme: HTTP
            initialDelaySeconds: 180
            periodSeconds: 20
            successThreshold: 1
            timeoutSeconds: 5
          name: sonarqube
          ports:
          - containerPort: 9000
            protocol: TCP
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /
              port: 9000
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 20
            successThreshold: 1
            timeoutSeconds: 5
          resources:
            limits:
              cpu: "1"
              memory: 2Gi
            requests:
              cpu: 200m
              memory: 1Gi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /opt/sonarqube/data
            name: sonarqube-data
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - name: sonarqube-data
          persistentVolumeClaim:
            claimName: sonarqube-data
  status:
    availableReplicas: 1
    fullyLabeledReplicas: 1
    observedGeneration: 2
    readyReplicas: 1
    replicas: 1
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: 2020-06-29T23:47:48Z
    labels:
      app: sonarqube
    name: sonarqube
    namespace: myproject
    resourceVersion: "151884"
    selfLink: /api/v1/namespaces/myproject/services/sonarqube
    uid: f000d8d6-ba62-11ea-8f7c-46673c28143b
  spec:
    clusterIP: 172.30.179.148
    ports:
    - name: sonarqube
      port: 9000
      protocol: TCP
      targetPort: 9000
    selector:
      app: sonarqube
      deploymentconfig: sonarqube
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: 2020-06-29T23:47:48Z
    generation: 2
    labels:
      app: sonarqube
      deploymentconfig: sonarqube
    name: sonarqube
    namespace: myproject
    resourceVersion: "152474"
    selfLink: /apis/apps.openshift.io/v1/namespaces/myproject/deploymentconfigs/sonarqube
    uid: f016f55f-ba62-11ea-8b66-46673c28143b
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      app: sonarqube
      deploymentconfig: sonarqube
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        annotations:
          openshift.io/container.sonarqube.image.entrypoint: '["./bin/run.sh"]'
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: sonarqube
          deploymentconfig: sonarqube
      spec:
        containers:
        - image: openshiftdemos/sonarqube@sha256:fe2c7b8e9923c4dc4bd7a5d12d51ee61eb171f8898121d5f7a921ba4e5a3e67c
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /
              port: 9000
              scheme: HTTP
            initialDelaySeconds: 180
            periodSeconds: 20
            successThreshold: 1
            timeoutSeconds: 5
          name: sonarqube
          ports:
          - containerPort: 9000
            protocol: TCP
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /
              port: 9000
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 20
            successThreshold: 1
            timeoutSeconds: 5
          resources:
            limits:
              cpu: "1"
              memory: 2Gi
            requests:
              cpu: 200m
              memory: 1Gi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /opt/sonarqube/data
            name: sonarqube-data
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - name: sonarqube-data
          persistentVolumeClaim:
            claimName: sonarqube-data
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - sonarqube
        from:
          kind: ImageStreamTag
          name: sonarqube:6.7
          namespace: myproject
        lastTriggeredImage: openshiftdemos/sonarqube@sha256:fe2c7b8e9923c4dc4bd7a5d12d51ee61eb171f8898121d5f7a921ba4e5a3e67c
      type: ImageChange
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: 2020-06-29T23:50:07Z
      lastUpdateTime: 2020-06-29T23:50:07Z
      message: Deployment config has minimum availability.
      status: "True"
      type: Available
    - lastTransitionTime: 2020-06-29T23:50:09Z
      lastUpdateTime: 2020-06-29T23:50:09Z
      message: replication controller "sonarqube-1" successfully rolled out
      reason: NewReplicationControllerAvailable
      status: "True"
      type: Progressing
    details:
      causes:
      - type: ConfigChange
      message: config change
    latestVersion: 1
    observedGeneration: 2
    readyReplicas: 1
    replicas: 1
    unavailableReplicas: 0
    updatedReplicas: 1
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
      openshift.io/image.dockerRepositoryCheck: 2020-06-29T23:47:51Z
    creationTimestamp: 2020-06-29T23:47:48Z
    generation: 2
    labels:
      app: sonarqube
    name: sonarqube
    namespace: myproject
    resourceVersion: "151913"
    selfLink: /apis/image.openshift.io/v1/namespaces/myproject/imagestreams/sonarqube
    uid: f00efa3d-ba62-11ea-8b66-46673c28143b
  spec:
    lookupPolicy:
      local: false
    tags:
    - annotations:
        description: The SonarQube Docker image
        tags: sonarqube
      from:
        kind: DockerImage
        name: openshiftdemos/sonarqube:6.7
      generation: 2
      importPolicy: {}
      name: "6.7"
      referencePolicy:
        type: Source
  status:
    dockerImageRepository: 172.30.1.1:5000/myproject/sonarqube
    tags:
    - items:
      - created: 2020-06-29T23:47:51Z
        dockerImageReference: openshiftdemos/sonarqube@sha256:fe2c7b8e9923c4dc4bd7a5d12d51ee61eb171f8898121d5f7a921ba4e5a3e67c
        generation: 2
        image: sha256:fe2c7b8e9923c4dc4bd7a5d12d51ee61eb171f8898121d5f7a921ba4e5a3e67c
      tag: "6.7"
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      description: Route for SonarQube's http service.
      openshift.io/generated-by: OpenShiftNewApp
      openshift.io/host.generated: "true"
    creationTimestamp: 2020-06-29T23:47:48Z
    labels:
      app: sonarqube
    name: sonarqube
    namespace: myproject
    resourceVersion: "151892"
    selfLink: /apis/route.openshift.io/v1/namespaces/myproject/routes/sonarqube
    uid: f0030b58-ba62-11ea-8b66-46673c28143b
  spec:
    host: sonarqube-myproject.192.168.64.3.nip.io
    to:
      kind: Service
      name: sonarqube
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: 2020-06-29T23:47:48Z
        status: "True"
        type: Admitted
      host: sonarqube-myproject.192.168.64.3.nip.io
      routerName: router
      wildcardPolicy: None
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
